--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,14 +2,14 @@
   max-width: 1000px;
 }
 
-body, html {
+/*body, html {
   margin: 0;
   height: 100%;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-}
+}*/
 
 text {
   font: 10px sans-serif;
