--- a/templates/graph.html
+++ b/templates/graph.html
@@ -16,10 +16,13 @@
   clip-path: url(#clip);
 }*/
 
-
 </style>
-<body>
+<body class="container">
+  <a class="brand" href="#">moodtube TESTING TESTING</a>
   <h1>YouTube Music Mood Over Time</h1>
+  <p>
+    Spotify's Web API returns a measurement called 'valence': "A measure from 0.0 to 1.0 describing the musical positiveness conveyed by a track. Tracks with high valence sound more positive (e.g. happy, cheerful, euphoric), while tracks with low valence sound more negative (e.g. sad, depressed, angry)."
+  </p>
   <svg width="960" height="500"></svg>
   <script>
 
@@ -119,6 +122,30 @@
       .attr("class", "axis axis--y")
       .call(yAxis);
 
+    focus.selectAll("dot")
+        .data(my_data)
+      .enter().append("circle")
+          .attr("r", 2)
+          .attr("cx", function(d) { return x(d.id); })
+          .attr("cy", function(d) { return y(d.mood); })
+          .on("mouseover", function(d) {
+              console.log("HERE I AM TRYING TO GET DATA");
+              d3.select(this).attr("r", 7);
+              div.transition()
+                  .duration(200)
+                  .style("opacity", .9);
+              // div.html(d.title + " - " + d.mood)
+              focus.select("text").text(function() { return d.mood; })
+                  .style("left", (d3.event.pageX) + "px")
+                  .style("top", (d3.event.pageY - 28) + "px");
+              })
+           .on("mouseout", function(d) {
+              d3.select(this).attr("r", 4);
+              div.transition()
+                  .duration(500)
+                  .style("opacity", 0);
+            });
+
     context.append("path")
       .datum(my_data)
       .attr("class", "area")
@@ -152,6 +179,8 @@
       x.domain(s.map(x2.invert, x2));
       focus.select(".area").attr("d", area);
       focus.select(".axis--x").call(xAxis);
+      focus.selectAll("circle")
+          .attr("cx", function(d) { return x(d.id); })
       svg.select(".zoom").call(zoom.transform, d3.zoomIdentity
           .scale(width / (s[1] - s[0]))
           .translate(-s[0], 0));
@@ -163,8 +192,12 @@
       x.domain(t.rescaleX(x2).domain());
       focus.select(".area").attr("d", area);
       focus.select(".axis--x").call(xAxis);
+      focus.selectAll("circle")
+          .attr("cx", function(d) { return x(d.id); })
       context.select(".brush").call(brush.move, x.range().map(t.invertX, t));
     }
+
+
 
     function type(d) {
       d.id = +d.id;
@@ -194,9 +227,29 @@
       .style("stroke", "red")
       .attr("d", avgline);
 
+    svg.append("text")
+      .attr("transform",
+            "translate(" + (width/2) + " ," +
+                           (height + margin.top + 109) + ")")
+      .style("text-anchor", "middle")
+      .text("Most recent songs to oldest (by Song IDs)");
+
+    svg.append("text")
+      .attr("transform", "rotate(-90)")
+      .attr("y", 0 - margin.left)
+      .attr("x",0 - (height / 2))
+      .attr("dy", "1em")
+      .style("text-anchor", "middle")
+      .text("Value");
+
+
   </script>
   <script src="//code.jquery.com/jquery-2.2.1.min.js"></script>
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    {% for table in tables %}
+      <h2>{{titles[loop.index]}}</h2>
+      {{ table|safe }}
+    {% endfor %}
 </body>
 </html>
 
