--- a/templates/index.html
+++ b/templates/index.html
@@ -9,14 +9,14 @@
   <body class="body">
     <div class="container">
       <nav class="navbar navbar-default" role="navigation">
-        <a class="brand" href="#">moodtube TESTING TESTING</a>
+        <a class="brand" href="#">moodtube</a>
         <ul class="nav">
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#">Link</a></li>
           <li><a href="#">Link</a></li>
         </ul>
       </nav>
-    
+
       <h1>Method used: {{request}}</h1>
 
     </div>
