--- a/templates/json.html
+++ b/templates/json.html
@@ -15,6 +15,7 @@
     }
     </style>
   <body>
+    <a class="brand" href="#">moodtube</a>
     <div class="results">
       <pre>{{ response }}</pre>
     </div>
