--- a/templates/test.html
+++ b/templates/test.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class=page>
-    <a class="brand" href="#">moodtube TESTING TESTING</a>
+    <a class="brand" href="#">moodtube</a>
     <h1>My SONGS!</h1>
     {% for table in tables %}
       <h2>{{titles[loop.index]}}</h2>
